--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,6 @@
   "license": "MIT",
   "dependencies": {
     "mqtt": "^3.0.0",
-    "mysql": "^2.18.1",
-    "mysql2": "^2.1.0"
+    "mysql": "^2.18.1"
   }
 }
