--- a/inside_station/platformio.ini
+++ b/inside_station/platformio.ini
@@ -12,3 +12,11 @@
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
+lib_deps =
+    Adafruit BME280 Library@2.0.2
+    Adafruit GFX Library@1.8.3
+    Adafruit SSD1306@2.2.1
+    Adafruit Unified Sensor@1.1.3
+    NTPClient@3.1.0
+    PubSubClient@2.8
+    Time@1.6
