--- a/outside_station/platformio.ini
+++ b/outside_station/platformio.ini
@@ -12,3 +12,7 @@
 platform = espressif8266
 board = esp8285
 framework = arduino
+lib_deps =
+    PubSubClient@2.8
+    OneWire@2.3.5
+    DallasTemperature@3.8.1
