--- a/outside_station/platformio.ini
+++ b/outside_station/platformio.ini
@@ -8,11 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp8285]
+[env:esp8266]
 platform = espressif8266
-board = esp8285
+board = d1_mini
 framework = arduino
-lib_deps =
-    PubSubClient@2.8
-    OneWire@2.3.5
-    DallasTemperature@3.8.1
+lib_deps = 
+	PubSubClient@2.8
+	OneWire@2.3.5
+	DallasTemperature@3.8.1
