--- a/solar/platformio.ini
+++ b/solar/platformio.ini
@@ -8,13 +8,12 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp8266]
-platform = espressif8266
-board = d1_mini
+[env:nodemcuv2]
+board = esp32doit-devkit-v1
 framework = arduino
-lib_deps = 
-	PubSubClient@2.8
-	OneWire@2.3.5
-	DallasTemperature@3.8.1
-	bblanchon/ArduinoJson@^6.17.2
 monitor_speed = 115200
+platform = espressif32
+upload_protocol = espota
+upload_port = 192.168.1.203
+lib_deps = 
+	knolleary/PubSubClient@^2.8
