--- a/solar/platformio.ini
+++ b/solar/platformio.ini
@@ -13,7 +13,7 @@ board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
 platform = espressif32
-upload_protocol = espota
-upload_port = 192.168.1.203
+; upload_protocol = espota
+; upload_port = 192.168.1.203
 lib_deps = 
 	knolleary/PubSubClient@^2.8
