--- a/solar/platformio.ini
+++ b/solar/platformio.ini
@@ -1,13 +1,3 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
 [env:nodemcuv2]
 board = esp32doit-devkit-v1
 framework = arduino
@@ -17,3 +7,5 @@ platform = espressif32
 ; upload_port = 192.168.1.203
 lib_deps = 
 	knolleary/PubSubClient@^2.8
+	adafruit/Adafruit SSD1306 @ ^2.4.5
+	adafruit/Adafruit BusIO @ ^1.7.3
