--- a/solar/platformio.ini
+++ b/solar/platformio.ini
@@ -9,3 +9,5 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 	adafruit/Adafruit SSD1306 @ ^2.4.5
 	adafruit/Adafruit BusIO @ ^1.7.3
+	paulstoffregen/OneWire @ ^2.3.5
+	milesburton/DallasTemperature @ ^3.9.1
