Added mqtt to air qual

--- a/airqual/platformio.ini
+++ b/airqual/platformio.ini
@@ -12,5 +12,5 @@
 platform = espressif8266
 board = d1_mini_lite
 framework = arduino
-lib_deps = 
+lib_deps = knolleary/PubSubClient@^2.8
 monitor_speed = 115200
