--- a/solar/platformio.ini
+++ b/solar/platformio.ini
@@ -7,7 +7,10 @@ platform = espressif32
 ; upload_port = 192.168.1.203
 lib_deps = 
 	knolleary/PubSubClient@^2.8
-	adafruit/Adafruit SSD1306 @ ^2.4.5
-	adafruit/Adafruit BusIO @ ^1.7.3
 	paulstoffregen/OneWire @ ^2.3.5
 	milesburton/DallasTemperature @ ^3.9.1
+	; adafruit/Adafruit INA219 @ ^1.2.0
+	https://github.com/egzumer/Arduino-LaCrosse-TX23-Library
+
+	; adafruit/Adafruit SSD1306 @ ^2.4.5
+	; adafruit/Adafruit BusIO @ ^1.7.3
