--- a/inside_station/platformio.ini
+++ b/inside_station/platformio.ini
@@ -15,6 +15,7 @@ framework = arduino
 lib_deps =
     Adafruit BME280 Library@2.0.2
     Adafruit GFX Library@1.8.3
+    adafruit/Adafruit BusIO@^1.10.1
     Adafruit SSD1306@2.2.1
     Adafruit Unified Sensor@1.1.3
     NTPClient@3.1.0
