--- a/platformio.ini
+++ b/platformio.ini
@@ -21,7 +21,16 @@ lib_deps =
     Time@1.6
     NTPClient@3.1.0
 lib_extra_dirs =
-    /common/
+    ${PROJECT_DIR}/common
+
+[env:temp_sensor]
+platform = espressif8266
+board = esp_wroom_02
+build_src_filter = +<temp_sensor>
+lib_deps = 
+    ${env.lib_deps}
+lib_extra_dirs =
+    ${env.lib_extra_dirs}
 
 [env:air_quality]
 platform = espressif8266
@@ -29,6 +38,8 @@ board = d1_mini_lite
 build_src_filter = +<air_quality>
 lib_deps = 
     ${env.lib_deps}
+lib_extra_dirs =
+    ${env.lib_extra_dirs}
 
 [env:inside_station]
 platform = espressif8266
@@ -41,6 +52,8 @@ lib_deps =
     adafruit/Adafruit BusIO@^1.10.1
     Adafruit SSD1306@2.2.1
     Adafruit Unified Sensor@1.1.3
+lib_extra_dirs =
+    ${env.lib_extra_dirs}
 
 [env:outside_station]
 platform = espressif8266
@@ -51,13 +64,8 @@ lib_deps =
 	OneWire@2.3.5
 	DallasTemperature@3.8.1
 	bblanchon/ArduinoJson@^6.17.2
-
-[env:temp_sensor]
-platform = espressif8266
-board = esp_wroom_02
-build_src_filter = +<temp_sensor>
-lib_deps = 
-    ${env.lib_deps}
+lib_extra_dirs =
+    ${env.lib_extra_dirs}
 
 ; [env:solar]
 ; platform = espressif32
@@ -73,3 +81,5 @@ lib_deps =
 ;     adafruit/Adafruit BusIO@^1.10.1
 ;     Adafruit SSD1306@2.2.1
 ;     Adafruit Unified Sensor@1.1.3
+; lib_extra_dirs =
+;     ${env.lib_extra_dirs}
