--- a/platformio.ini
+++ b/platformio.ini
@@ -17,9 +17,6 @@ framework = arduino
 monitor_speed = 115200
 lib_deps = 
     knolleary/PubSubClient@^2.8
-	bblanchon/ArduinoJson@^6.17.2
-    Time@1.6
-    NTPClient@3.1.0
 lib_extra_dirs =
     ${PROJECT_DIR}/common
 
@@ -32,40 +29,42 @@ lib_deps =
 lib_extra_dirs =
     ${env.lib_extra_dirs}
 
-[env:air_quality]
-platform = espressif8266
-board = d1_mini_lite
-build_src_filter = +<air_quality>
-lib_deps = 
-    ${env.lib_deps}
-lib_extra_dirs =
-    ${env.lib_extra_dirs}
+; [env:air_quality]
+; platform = espressif8266
+; board = d1_mini_lite
+; build_src_filter = +<air_quality>
+; lib_deps = 
+;     ${env.lib_deps}
+; lib_extra_dirs =
+;     ${env.lib_extra_dirs}
 
-[env:inside_station]
-platform = espressif8266
-board = nodemcuv2
-build_src_filter = +<inside_station>
-lib_deps = 
-    ${env.lib_deps}
-    Adafruit BME280 Library@2.0.2
-    Adafruit GFX Library@1.8.3
-    adafruit/Adafruit BusIO@^1.10.1
-    Adafruit SSD1306@2.2.1
-    Adafruit Unified Sensor@1.1.3
-lib_extra_dirs =
-    ${env.lib_extra_dirs}
+; [env:inside_station]
+; platform = espressif8266
+; board = nodemcuv2
+; build_src_filter = +<inside_station>
+; lib_deps = 
+;     ${env.lib_deps}
+;     Adafruit BME280 Library@2.0.2
+;     Adafruit GFX Library@1.8.3
+;     adafruit/Adafruit BusIO@^1.10.1
+;     Adafruit SSD1306@2.2.1
+;     Adafruit Unified Sensor@1.1.3
+;     Time@1.6
+;     NTPClient@3.1.0
+; lib_extra_dirs =
+;     ${env.lib_extra_dirs}
 
-[env:outside_station]
-platform = espressif8266
-board = d1_mini
-build_src_filter = +<outside_station>
-lib_deps = 
-    ${env.lib_deps}
-	OneWire@2.3.5
-	DallasTemperature@3.8.1
-	bblanchon/ArduinoJson@^6.17.2
-lib_extra_dirs =
-    ${env.lib_extra_dirs}
+; [env:outside_station]
+; platform = espressif8266
+; board = d1_mini
+; build_src_filter = +<outside_station>
+; lib_deps = 
+;     ${env.lib_deps}
+; 	OneWire@2.3.5
+; 	DallasTemperature@3.8.1
+; 	bblanchon/ArduinoJson@^6.17.2
+; lib_extra_dirs =
+;     ${env.lib_extra_dirs}
 
 ; [env:solar]
 ; platform = espressif32
