switch to esp home

--- a/PLATFORM.IO/platformio.ini
+++ b/PLATFORM.IO/platformio.ini
@@ -26,6 +26,7 @@ board = esp_wroom_02
 build_src_filter = +<temp_sensor>
 lib_deps = 
     ${env.lib_deps}
+    adafruit/Adafruit AHTX0 @ ^2.0.3
 lib_extra_dirs =
     ${env.lib_extra_dirs}
 
