--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Gitignore settings for ESPHome
+# This is an example and may include too much for your use-case.
+# You can modify this file to suit your needs.
+.esphome/
+/secrets.yaml
+
+# old gitignore 
 .pio
 .vscode/.browse.c_cpp.db*
 .vscode/c_cpp_properties.json
