--- a/air-quality.yaml
+++ b/air-quality.yaml
@@ -8,7 +8,7 @@ esphome:
 wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
-  power_save_mode: high
+  power_save_mode: none # constantly plugged in no need for wifi power saving
   manual_ip:
     static_ip: 192.168.1.26
     gateway: 192.168.1.1
@@ -17,13 +17,12 @@ wifi:
 
 uart:
   rx_pin: D4
-  tx_pin: D5
+  tx_pin: D5 # this pin is actualy not used since we do not transmit anything to the sensor
   baud_rate: 9600
 
 i2c:
   scl: D1
   sda: D2
-  scan: true
   id: bus_a
 
 sensor:
@@ -38,4 +37,3 @@ sensor:
     humidity:
       name: "Humidity"
       id: living_room_humidity
-    # update_interval: 60s
