--- a/temp-sens-2.yaml
+++ b/temp-sens-2.yaml
@@ -26,9 +26,9 @@ i2c:
 #     name: "Switch state"
 #     pin: 16
 
-deep_sleep:
-  run_duration: 60s
-  sleep_duration: 15min
+# deep_sleep:
+#   run_duration: 60s
+#   sleep_duration: 10min
 
 sensor:
   - platform: aht10
